Replace template images and update text

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					</li>
 				</ul>
 			</nav>
-			<h1 class="nav-logo2">
+			<!--<h1 class="nav-logo2">
 				<img src="http://flexbox.ninja/assets/images/logo.svg" width="300" height="95" alt="Flexbox.ninja">
-			</h1>
+			</h1>-->
 		</div>
     </header>
 
@@ -39,7 +39,7 @@
 
     	<div class="frontpage">
 	    	<h1 class="main-logo">
-	    		<img src="http://flexbox.ninja/assets/images/logo.svg" width="500" height="100" alt="Flexbox.ninja">
+	    		<img src="images/apua_norppa.png" width="500" height="100" alt="apua">
 	    	</h1>
 	    	<div class="main-text">
 
@@ -59,7 +59,7 @@
 
     	<div class="donatepage">
 	    	<h1 class="main-logo">
-	    		<img src="http://flexbox.ninja/assets/images/logo.svg" width="500" height="100" alt="Flexbox.ninja">
+	    		<img src="images/apua_norppa.png" width="500" height="100" alt="apua">
 	    	</h1>
 	    	<div class="main-text">
 
@@ -130,18 +130,18 @@
 
 	    		<div class="gallery-row">
 					<div class="gallery-column">
-						<img src="http://flexbox.ninja/assets/images/logo.svg" onclick="openModal();currentSlide(1)" class="gallery-hover-shadow">
+						<img src="images/galleria_pullervo.png" onclick="openModal();currentSlide(1)" class="gallery-hover-shadow">
 					</div>
 					<div class="gallery-column">
-						<img src="http://flexbox.ninja/assets/images/logo.svg" onclick="openModal();currentSlide(2)" class="gallery-hover-shadow">
+						<img src="images/galleria_topias.png" onclick="openModal();currentSlide(2)" class="gallery-hover-shadow">
 					</div>
 					<div class="gallery-column">
-						<img src="http://flexbox.ninja/assets/images/logo.svg" onclick="openModal();currentSlide(3)" class="gallery-hover-shadow">
+						<img src="images/galleria_kuuttinorppa.png" onclick="openModal();currentSlide(3)" class="gallery-hover-shadow">
 					</div>
 					<div class="gallery-column">
-						<img src="http://flexbox.ninja/assets/images/logo.svg" onclick="openModal();currentSlide(4)" class="gallery-hover-shadow">
+						<img src="images/galleria_nestori.png" onclick="openModal();currentSlide(4)" class="gallery-hover-shadow">
 					</div>
-					<div class="gallery-column">
+					<!--<div class="gallery-column">
 						<img src="http://flexbox.ninja/assets/images/logo.svg" onclick="openModal();currentSlide(5)" class="gallery-hover-shadow">
 					</div>
 					<div class="gallery-column">
@@ -155,7 +155,7 @@
 					</div>
 					<div class="gallery-column">
 						<img src="http://flexbox.ninja/assets/images/logo.svg" onclick="openModal();currentSlide(9)" class="gallery-hover-shadow">
-					</div>
+					</div>-->
 				</div>
 
 				<div id="galleryModal" class="gallery-modal">
@@ -163,26 +163,26 @@
 					<div class="gallery-modal-content">
 						<div class="gallery-image-container">
 							<div class="gallery-slides">
-								<div class="slide-number">1</div>
-								<img src="http://flexbox.ninja/assets/images/logo.svg" style="width:100%">
+								<div class="slide-number"></div>
+								<img src="images/galleria_pullervo.png">
 							</div>
 
 							<div class="gallery-slides">
-								<div class="slide-number">2</div>
-								<img src="http://flexbox.ninja/assets/images/logo.svg" style="width:100%">
+								<div class="slide-number"></div>
+								<img src="images/galleria_topias.png">
 							</div>
 
 							<div class="gallery-slides">
-								<div class="slide-number">3</div>
-								<img src="http://flexbox.ninja/assets/images/logo.svg" style="width:100%">
+								<div class="slide-number"></div>
+								<img src="images/galleria_kuuttinorppa.png">
 							</div>
 
 							<div class="gallery-slides">
-								<div class="slide-number">4</div>
-								<img src="http://flexbox.ninja/assets/images/logo.svg" style="width:100%">
+								<div class="slide-number"></div>
+								<img src="images/galleria_nestori.png">
 							</div>
 							
-							<div class="gallery-slides">
+							<!--<div class="gallery-slides">
 								<div class="slide-number">5</div>
 								<img src="http://flexbox.ninja/assets/images/logo.svg" style="width:100%">
 							</div>
@@ -205,7 +205,7 @@
 							<div class="gallery-slides">
 								<div class="slide-number">9</div>
 								<img src="http://flexbox.ninja/assets/images/logo.svg" style="width:100%">
-							</div>
+							</div>-->
 
 							<a class="prev" onclick="moveSlides(-1)">&#10094;</a>
 							<a class="next" onclick="moveSlides(1)">&#10095;</a>
@@ -213,39 +213,39 @@
 
 						<div class="slide-caption-container" id="slideCaptions">
 							<div class="slide-caption">
-								<h1 id="slide-name">Pullervo</h1>
-								<h2 id="slide-title">Norppaliven tähti</h2>
-								<p id="slide-age">Ikä: vanha</p>
-								<p id="slide-size">Koko: läski</p>
+								<h1 id="slide-name">Pullervo - Norppaliven tähti!</h1>
+								<h2 id="slide-title"></h2>
+								<p id="slide-age"></p>
+								<p id="slide-size"></p>
 								<p id="slide-information">
-									Jotaki muuta aaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaa aaaaaaaaaaaaaaa aaaaaaaa aaaa aaaaaaaaa aaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaaaaaa aaaaaaaaaaaaaa aaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaa aaaaaaaaaaaaaaaaaaaa aaaaaa aaaaaaaaaaaaaaaaaaaa aaaaaaaaa aaaaaaaaaaa aaaaaaaaaaaa
+									Pullervo lienee Suomen tunnetuin norppa, kiitos WWF:n norppaliven. Vuonna 2016 WWF:n norppaliven tähtinorpalle etsittiin nimeä yleisöäänestyksen voimin. Yli 11 000 äänestäjää oli sitä mieltä, että Pullervo sopisi muodokkaan urosnorpan nimeksi. 
 								</p>
 							</div>
 							<div class="slide-caption">
-								<h1 id="slide-name">2</h1>
-								<h2 id="slide-title">2</h2>
-								<p id="slide-age">2</p>
-								<p id="slide-size">2</p>
+								<h1 id="slide-name">Piitsniemen Topias - Lepää rauhassa!</h1>
+								<h2 id="slide-title"></h2>
+								<p id="slide-age"></p>
+								<p id="slide-size"></p>
 								<p id="slide-information">
-									2
+									Topiaksen eli "sen Korkeasaari-Norpan" kuolemasta 15.2.2020 uutisoitiin laajasti Suomen mediassa. Topias löydettiin huonokuntoisena Puumalasta kesällä 2019, jonka jälkeen norppa toimitettiin hoitoon Korkeasaareen. Topias toipui ja se sai kodin saukkoaltaasta. Siitä oli tarkoitus tulla ensimmäinen eläintarha-saimaannorppa. Allas uusittiin Topiaksen tarpeita ajatellen, mutta norppaparka onnistui loukkaamaan ihonsa altaan uudenkarheaan betonipintaan. Samalla huomattiin, että sen suolistoon oli päätynyt hiekkaa, mikä aiheutti suolitukoksen. Topiasta ei saatu pelastettua.
 								</p>
 							</div>
 							<div class="slide-caption">
-								<h1 id="slide-name">3</h1>
-								<h2 id="slide-title">3</h2>
-								<p id="slide-age">3</p>
-								<p id="slide-size">3</p>
+								<h1 id="slide-name">Kuutit</h1>
+								<h2 id="slide-title"></h2>
+								<p id="slide-age"></p>
+								<p id="slide-size"></p>
 								<p id="slide-information">
-									3
+									Saimaannorppa synnyttää poikasensa lumipesiin jäälle. Kuuttien suurin uhka on ilmastonmuutos: vähälumiset talvet aiheuttavat norpille ongelmia. Jos kuutti syntyy avojäälle, se on petojen armoilla. Keväällä 2020 saimaannorpan pesälaskennoissa löydettiin 32 kuuttia ja surullisesti niistä yhdeksän löytyi kuolleena.
 								</p>
 							</div>
 							<div class="slide-caption">
-								<h1 id="slide-name">P4</h1>
-								<h2 id="slide-title">4</h2>
-								<p id="slide-age">4</p>
-								<p id="slide-size">4</p>
+								<h1 id="slide-name">Vanhojapoikia viiksekkäitä</h1>
+								<h2 id="slide-title"></h2>
+								<p id="slide-age"></p>
+								<p id="slide-size"></p>
 								<p id="slide-information">
-									4
+									Tämä on fiktiivinen norppa, joka esiintyy Juha Vainion "Vanhojapoikia viiksekkäitä" kappaleessa vuodelta 1982. Kappaleen päähenkilöitä ovat yksinäinen vanhapoika Nestori Miikkulainen ja norppa, jotka ovat molemmat sukunsa viimeisiä. Laulun teemoja ovat maaseudun autioituminen ja luonnonsuojelu. Idean lauluun Vainio sai toimittaja Veikko Kilkkiltä, joka oli toimittajan työssään todennut saimaannorpan ahdingon. Vuonna 2000 perustettiin saimaannorppia suojeleva säätiö nimeltään Nestorisäätiö.
 								</p>
 							</div>
 						</div>
@@ -256,17 +256,33 @@
 
     	<div class="infopage">
 	    	<h1 class="main-logo">
-	    		<img src="http://flexbox.ninja/assets/images/logo.svg" width="500" height="100" alt="Flexbox.ninja">
+	    		<img src="images/apua_norppa.png" width="500" height="100" alt="apua">
 	    	</h1>
 	    	<div class="main-text">
 
 	    		<p>Esittelyteksti saimaannorpasta</p>
 
 	    		<h1>Tietoa saimaannorpasta</h1>
-	    		<p>Teskstiä pitkästi</p>
+	    		<p>Saimaannorppa (Phoca hispida saimensis) on ainoastaan Suomessa Saimaalla tavattava hyljelaji. Se on luokiteltu erittäin uhanalaiseksi (EN). Saimaannorppa on luonnonsuojeluasetuksen perusteella erityisesti suojeltava laji ja se on määritelty EU:n luontodirektiivissä tiukkaa suojelua vaativaksi lajiksi. Saimaannorppien määrä on suojelutoimien vuoksi hienoisessa nousussa, mutta se on yhä erittäin uhanalainen. Vuonna 2012 kanta oli noin 310 yksilöä, vuonna 2016 kanta oli noussut 360 yksilöön.
+	    		</p>
 
 	    		<h2>Miten voit auttaa?</h2>
-	    		<p>Tekstiä pitkästi</p>
+	    		<ul>
+	    			<li>Torju ilmastonmuutosta. Ilmastonmuutos on saimaannorpan suurin vihollinen: lumeton Saimaa altistaa norpat pedoille. Vaihda joukkoliikenteeseen, vähennä ilmastolle raskaiden tuotteiden kulutusta, kuten lihaa ja eläinperäistä ruokaa, suosi kasvisruokavaliota, kierrätä ja korjaa. Ilmastonmuutos uhkaa myös ihmistä ja muita lajeja.
+	    			</li>
+
+					<li>Älä verkkokalasta Saimaalla. Verkkokalastus on suuri uhka norpalle. Keväisin verkkokalastusta on rajoitettu Saimaalla norppien vuoksi, mutta verkkoon kuolee silti useita norppia vuosittain. Kalasta norppaystävällisellä katiskalla.
+					</li>
+
+					<li>Anna norpalle pesimisrauha! Norppien pesimisaikoihin keväällä ei pidä ajaa moottorikelkalla tai muuten liikkua ja metelöidä niiden pesintäalueilla. Kierrä norpan pesä tai makuukivi kaukaa äläkä lähesty niitä. Selvitä, mökkeiletkö tai asutko keskeisellä norppa-alueella esimerkiksi Metsähallituksen julkaisusta <a href="https://julkaisut.metsa.fi/julkaisut/show/2183)" target="dsdf">Norppien tärkeimmät pesimisalueet</a>.
+					</li>
+
+					<li>Jos havaitset norpan, älä lähesty sitä! Kuutin koskettamisessa on molemminpuolinen tautivaara ja emo saattaa hylätä kuutin. Laki kieltää saimaannorpan häiritsemisen. Kerro norppahavainnoistasi Metsähallituksen norppakannan seurantaan. Pitämällä havainnoistasi kirjaa, voit auttaa norpan suojelua.
+					</li>
+
+					<li>Lahjoittamalla Norppa-Avulle tai muulle saimaannorppia auttavalle luonnonsuojelujärjestölle (kuten WWF Suomi, Nestorisäätiö tai Suomen Luonnonsuojeluliitto) olet mukana suojelutyössä. Avustuksilla kustannetaan varusteita apukinoskolauksiin, rahoitetaan pesälaskentoja ja suojelututkimusta ja aloitteiden tekemistä päätöksentekijöille.
+					</li>
+				</ul>
 
 	    		<h2>Tietoa meistä</h2>
 	    		<p>
@@ -279,7 +295,7 @@
 
     	<div class="thankspage">
 	    	<h1 class="main-logo">
-	    		<img src="http://flexbox.ninja/assets/images/logo.svg" width="500" height="100" alt="Flexbox.ninja">
+	    		<img src="images/kiitosnorppa.png" width="500" height="100" alt="kiitos">
 	    	</h1>
 	    	<div class="main-text">
 
