Add smarter error checking and update logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     	<div class="container">
 			<h1 class="nav-logo">
 				<a href="#" onClick="swapPages('main-div', 'frontpage')">
-					<img src="http://flexbox.ninja/assets/images/logo.svg" width="170" height="95" alt="Flexbox.ninja">
+					<img src="images/norppalogo-01.png" width="200" alt="logo">
 				</a>
 			</h1>
 			<nav class="main-nav">
@@ -29,9 +29,6 @@
 					</li>
 				</ul>
 			</nav>
-			<!--<h1 class="nav-logo2">
-				<img src="http://flexbox.ninja/assets/images/logo.svg" width="300" height="95" alt="Flexbox.ninja">
-			</h1>-->
 		</div>
     </header>
 
